@@ -10441,6 +10441,11 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
         </listitem>
 
         <listitem>
+          <para>Fix: transition condition label was not always fully shown
+          </para>
+        </listitem>
+
+        <listitem>
           <para>Linux tar.gz distributions now built under windows</para>
         </listitem>
 
